<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:elevation="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/img_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etName"/>

        <EditText
            android:id="@+id/etName"
            android:hint="@string/txt_hint_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_textfield_rounded_white"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
            app:layout_constraintBottom_toTopOf="@id/etPalindrome"/>

        <EditText
            android:id="@+id/etPalindrome"
            android:hint="@string/txt_hint_sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_textfield_rounded_white"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintBottom_toTopOf="@id/layCoreButton"/>

        <LinearLayout
            android:id="@id/layCoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/relFacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPalindrome">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="0.9"
                android:background="@drawable/bg_button_rounded_orange"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineProvider="background"
                android:shadowDy="20"
                android:shadowRadius="0"
                android:text="@string/txt_button_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCheck"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@drawable/bg_button_rounded_orange"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineProvider="background"
                android:shadowDy="20"
                android:shadowRadius="0"
                android:text="@string/txt_button_check"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/relGoogle"
            style="@style/BtnLayoutSocialAuth"
            android:background="@drawable/bg_button_rounded_social_auth_google"
            app:layout_constraintEnd_toStartOf="@+id/relFacebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layCoreButton">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/ic_google"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relFacebook"
            style="@style/BtnLayoutSocialAuth"
            android:background="@drawable/bg_button_rounded_social_auth_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layCoreButton">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/ic_facebook"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relTwitter"
            style="@style/BtnLayoutSocialAuth"
            android:background="@drawable/bg_button_rounded_social_auth_twitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relFacebook"
            app:layout_constraintTop_toBottomOf="@+id/layCoreButton">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/ic_twitter"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>